fix: optimized layout

--- a/ui/src/global.less
+++ b/ui/src/global.less
@@ -19,15 +19,20 @@ body,
 .ant-layout {
   min-height: 100vh;
 }
+
+.ant-pro-basicLayout-content {
+  margin: 20px 24px 5px;
+}
+
 .ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
   left: unset;
 }
 .ant-layout-content {
   height: calc(100vh - 120px);
-  margin: 20px 0 !important;
-  padding: 0 15px;
+  //margin: 20px 24px 5px !important;
   overflow-y: auto;
   background: #fff;
+  border-radius: 8px;
 }
 
 .ant-pro-top-nav-header-logo {
