--- a/ui/src/pages/DataLogs/components/RawLogsIndexes/IndexItem/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogsIndexes/IndexItem/index.less
@@ -3,7 +3,7 @@
   .detailContextMain {
     flex: 1;
     padding: 10px;
-    background: #fff;
+    background: #f5f5f5;
     .context {
       display: flex;
       flex-direction: column;
