--- a/ui/src/pages/DataLogs/styles/index.less
+++ b/ui/src/pages/DataLogs/styles/index.less
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  padding: 10px 0;
+  padding: 10px 15px;
 }
 .siteDrawerInCurrentWrapper {
   position: relative;
