--- a/ui/src/pages/Configure/components/Editor/index.less
+++ b/ui/src/pages/Configure/components/Editor/index.less
@@ -1,13 +1,23 @@
 .editorMain {
+  display: flex;
   flex: 1;
+  flex-direction: column;
+
   .editorHeader {
     display: flex;
+    flex: 0 0 40px;
     align-items: center;
     width: 100%;
-    height: 40px;
     padding: 10px 0 10px 30px;
     color: hsl(0, 0%, 58%);
     background: hsl(0, 0%, 12%);
+    .editorUser {
+      margin-right: 10px;
+      font-weight: bold;
+    }
+  }
+  .editor {
+    flex: 1;
   }
 }
 
