fix: optimize configuration page interaction

--- a/ui/src/pages/Configure/components/Editor/index.less
+++ b/ui/src/pages/Configure/components/Editor/index.less
@@ -22,8 +22,11 @@
 }
 
 .editorLoading {
+  display: flex;
   flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: hsl(0, 0%, 54%);
-  text-align: center;
   background: hsl(0, 0%, 12%);
 }
