--- a/ui/src/pages/Configure/components/SelectedBar/index.less
+++ b/ui/src/pages/Configure/components/SelectedBar/index.less
@@ -1,5 +1,7 @@
 .selectedBar {
+  display: flex;
   flex: 0 0 52px;
+  align-items: center;
   margin-left: 10px;
   .selectedInput {
     width: 200px;
@@ -7,5 +9,12 @@
   .cascaderInput {
     width: 260px;
     margin: 10px;
+  }
+  .describe {
+    display: flex;
+    align-items: end;
+    height: 32px;
+    margin-left: 10px;
+    font-size: 14px;
   }
 }
