fix: optimize page layout

--- a/ui/src/pages/Configure/components/Editor/index.less
+++ b/ui/src/pages/Configure/components/Editor/index.less
@@ -28,5 +28,6 @@
   align-items: center;
   justify-content: center;
   color: hsl(0, 0%, 54%);
+  text-align: center;
   background: hsl(0, 0%, 12%);
 }
