--- a/ui/src/pages/DataLogs/components/RawLogsIndexes/IndexItem/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogsIndexes/IndexItem/index.less
@@ -2,6 +2,7 @@
   border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
   .detailContextMain {
     flex: 1;
+    width: 180px;
     padding: 10px 0 10px 10px;
     background: #f5f5f5;
     .context {
@@ -16,6 +17,7 @@
           display: block;
           width: 70%;
           overflow: hidden;
+          line-height: 20px;
           white-space: nowrap;
           text-overflow: ellipsis;
         }
