--- a/ui/src/pages/DataLogs/components/RawLogsIndexes/IndexItem/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogsIndexes/IndexItem/index.less
@@ -2,8 +2,8 @@
   border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
   .detailContextMain {
     flex: 1;
-    width: 180px;
-    padding: 10px 0 10px 10px;
+    width: 178px;
+    padding: 10px;
     background: #f5f5f5;
     .context {
       display: flex;
@@ -21,9 +21,26 @@
           white-space: nowrap;
           text-overflow: ellipsis;
         }
+        .nameHover {
+          &:hover {
+            color: hsl(210, 7%, 27%);
+            font-weight: bold;
+            text-decoration: underline;
+            cursor: pointer;
+          }
+        }
       }
-      .progress {
-        width: 80%;
+      .progressMain {
+        display: flex;
+        width: 100%;
+        .progress {
+          flex: 0 0 65%;
+        }
+        .percent {
+          flex: 1;
+          margin-left: 8px;
+          text-align: left;
+        }
       }
     }
   }
