--- a/ui/src/pages/DataLogs/components/RawLogs/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogs/index.less
@@ -1,12 +1,15 @@
 .rawLogsMain {
   display: flex;
   flex: 1;
+  min-width: 0;
   min-height: 0;
   margin-top: 5px;
   .rawLogs {
     display: flex;
     flex: 1;
     flex-direction: column;
+    min-width: 0;
+    min-height: 0;
     padding: 5px;
     background: hsla(210, 16%, 93%, 0.8);
     border: 1px solid hsla(0, 0%, 0%, 0.1);
