--- a/ui/src/pages/DataLogs/components/RawLogsOperations/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogsOperations/index.less
@@ -9,5 +9,11 @@
 
   .operationsBtn {
     font-size: 16px;
+    .tableBtn {
+      cursor: pointer;
+    }
+  }
+  .pagination {
+    user-select: none;
   }
 }
