style: Modify the theme color

--- a/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/index.less
+++ b/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/index.less
@@ -12,12 +12,15 @@
       line-height: 32px;
       white-space: nowrap;
       text-overflow: ellipsis;
-      background: hsla(208, 97%, 87%, 0.3);
-      border-radius: 8px;
       cursor: pointer;
+      &:hover {
+        color: #fff;
+        background: #f2905c;
+      }
     }
     .activeLogLibrary {
-      background: hsl(208, 97%, 87%);
+      color: #fff;
+      background: #ee722e;
     }
   }
 }
