--- a/ui/src/pages/DataLogs/components/RawLogsIndexes/IndexItem/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogsIndexes/IndexItem/index.less
@@ -1,3 +1,4 @@
+@import "../../../../../styles/var.less";
 .indexItemMain {
   border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
   .detailContextMain {
@@ -23,8 +24,7 @@
         }
         .nameHover {
           &:hover {
-            color: hsl(210, 7%, 27%);
-            font-weight: bold;
+            color: @primary-color-90;
             text-decoration: underline;
             cursor: pointer;
           }
