--- a/ui/src/pages/DataLogs/styles/index.less
+++ b/ui/src/pages/DataLogs/styles/index.less
@@ -5,8 +5,5 @@
   padding: 10px 15px;
 }
 .siteDrawerInCurrentWrapper {
-  position: relative;
-  overflow: hidden;
-  text-align: center;
-  background: #fafafa;
+  background: hsl(0, 0, 98%);
 }
