--- a/ui/src/pages/SystemSetting/ClustersPanel/index.less
+++ b/ui/src/pages/SystemSetting/ClustersPanel/index.less
@@ -1,3 +1,4 @@
+@import "../../../styles/var.less";
 .clusterPanelMain {
   display: flex;
   flex: 1;
@@ -28,7 +29,7 @@
     flex: 1;
     overflow-y: auto;
     .icon {
-      color: #1890ff;
+      color: @primary-color;
       cursor: pointer;
     }
     .renderText {
