--- a/ui/src/pages/SystemSetting/InstancePanel/components/InstanceTable/index.less
+++ b/ui/src/pages/SystemSetting/InstancePanel/components/InstanceTable/index.less
@@ -1,9 +1,10 @@
+@import "../../../../../styles/var.less";
 .instanceTableMain {
   flex: 1;
   overflow-y: auto;
 
   .instanceTableIcon {
-    color: #1890ff;
+    color: @primary-color;
     cursor: pointer;
   }
 }
