--- a/ui/src/pages/DataLogs/components/RawLogsOperations/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogsOperations/index.less
@@ -1,11 +1,12 @@
+@import "../../../../styles/var.less";
+
 .rawLogsOperationsMain {
   display: flex;
   flex: 0 0 32px;
   align-items: center;
   justify-content: space-between;
   padding: 0 5px;
-  background: hsla(210, 14%, 83%, 0.4);
-  border-radius: 5px;
+  border-bottom: 1px solid @border-color;
 
   .operationsBtn {
     font-size: 16px;
