style: Modify the theme color

--- a/ui/src/pages/DataLogs/components/RawLogList/LogItem/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogList/LogItem/index.less
@@ -45,6 +45,9 @@
             background: @primary-color-8;
           }
         }
+        .logKeyHover {
+          cursor: pointer;
+        }
         .logContent {
           margin-left: 4px;
           word-break: break-all;
