--- a/ui/src/components/JsonView/index.less
+++ b/ui/src/components/JsonView/index.less
@@ -1,3 +1,5 @@
+@import "../../styles/var.less";
+
 .jsonView {
   display: inline;
   line-height: 21px;
@@ -7,29 +9,24 @@
   }
 }
 
-.__react-json-view-key {
-  color: blueviolet;
+.jsonViewKey {
+  color: @font-color;
+  background: @primary-color-8;
 }
 
 .jsonViewValue {
   padding-left: 8px;
-  color: black;
+  color: @font-color;
 }
 
-.__react-json-view-bool {
-  color: rgb(0, 0, 128);
-}
-
-.__react-json-view-number {
-  color: blue;
-}
-
-.jsonViewArray {
-  .jsonViewArrayItem > .jsonViewValue {
-    padding-left: 0;
+.jsonViewValueHover {
+  &:hover {
+    color: @primary-color-90;
+    text-decoration: underline;
+    cursor: pointer;
   }
 }
 
-.jsonViewString {
-  color: green;
+.jsonViewArrayItem > .jsonViewValue {
+  padding-left: 0;
 }
