fix: Interface failure transmission after modification

--- a/ui/src/pages/DataLogs/components/SelectedDatabaseDraw/index.less
+++ b/ui/src/pages/DataLogs/components/SelectedDatabaseDraw/index.less
@@ -17,5 +17,8 @@
     .ant-table-pagination.ant-pagination {
       margin: 10px 0;
     }
+    .ant-space-item:first-child {
+      flex: 1;
+    }
   }
 }
