fix: add alarm form

--- a/ui/src/pages/Alarm/styles/index.less
+++ b/ui/src/pages/Alarm/styles/index.less
@@ -7,5 +7,9 @@
   .operationMain {
     display: flex;
     flex: 0 0 42px;
+    align-items: center;
+    .selectedBar {
+      width: 240px;
+    }
   }
 }
