fix: Fix the URL path problem of the interface

--- a/ui/src/pages/DataLogs/components/RawLogList/LogItem/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogList/LogItem/index.less
@@ -51,6 +51,13 @@
         .logContent {
           margin-left: 4px;
           word-break: break-all;
+          :global {
+            .ant-tag {
+              height: 20px;
+              color: #41464beb;
+              line-height: 20px;
+            }
+          }
         }
         .logHover {
           &:hover {
