fix: Fix the URL path problem of the interface

--- a/ui/src/pages/document.ejs
+++ b/ui/src/pages/document.ejs
@@ -21,7 +21,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>ClickHouse UI</title>
+    <title>MoGo</title>
     <link rel="icon" href="<%= context.config.publicPath + 'favicon.ico'%>" type="image/x-icon" />
   </head>
   <body>
@@ -40,7 +40,7 @@
         "
       >
           <img style='height: 100px;width: 100px;' src="<%= context.config.publicPath + 'favicon.ico'%>" />
-          <div><span>MOGO</span></div>
+          <div><span>MoGo</span></div>
           <div><span style="font-size: 24px;">&copy;&nbsp;ShiMo_SRE</span></div>
       </div>
     </div>
