fix: Fix the URL path problem of the interface

--- a/ui/src/pages/Alarm/components/FormAlarmDraw/InspectionFrequencyItem/index.less
+++ b/ui/src/pages/Alarm/components/FormAlarmDraw/InspectionFrequencyItem/index.less
@@ -2,15 +2,7 @@
   .selectType {
     width: 100px;
   }
-  :global {
-    .ant-form-item {
-      position: relative;
-      margin-bottom: 0;
-    }
-    .ant-form-item-with-help .ant-form-item-explain {
-      position: absolute;
-      top: 32px;
-      min-height: 0;
-    }
+  .selectHours {
+    width: 100px;
   }
 }
