fix: Fixed a linkage form style issue

--- a/ui/src/pages/Alarm/components/FormAlarmDraw/TriggerConditionItem/index.less
+++ b/ui/src/pages/Alarm/components/FormAlarmDraw/TriggerConditionItem/index.less
@@ -1,7 +1,8 @@
 .conditionsMain {
   flex: 1;
   .fieldLine {
-    display: flex;
+    display: inline-flex;
+    width: 100%;
     .itemMargin {
       margin-right: 8px;
       .formItemMargin {
