fix: Fixed a linkage form style issue

--- a/ui/src/pages/Alarm/components/FormAlarmDraw/TriggerConditionItem/index.less
+++ b/ui/src/pages/Alarm/components/FormAlarmDraw/TriggerConditionItem/index.less
@@ -1,19 +1,15 @@
 .conditionsMain {
   flex: 1;
   .fieldLine {
-    display: inline-flex;
     width: 100%;
-    .itemMargin {
-      margin-right: 8px;
-      .formItemMargin {
-        margin-bottom: 0;
-      }
+    .formItemMargin {
+      margin-bottom: 0;
     }
     .selectItem {
-      flex: 0 0 15%;
+      width: 90px;
     }
     .selectCond {
-      flex: 0 0 20%;
+      width: 135px;
     }
     .inputNumber {
       width: 82px;
