fix: Add parameters to the instance form

--- a/ui/src/pages/SystemSetting/InstancePanel/components/CreatedOrUpdatedInstanceModal/index.less
+++ b/ui/src/pages/SystemSetting/InstancePanel/components/CreatedOrUpdatedInstanceModal/index.less
@@ -1,5 +1,7 @@
-.submitBtn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.moreOptions {
+  line-height: 32px;
+  text-align: right;
+}
+.moreOptionsShow {
+  margin-bottom: 10px;
 }
