--- a/ui/src/pages/Alarm/styles/index.less
+++ b/ui/src/pages/Alarm/styles/index.less
@@ -14,6 +14,12 @@
     }
   }
 
+  .tableMain {
+    flex: 1;
+    min-height: 0;
+    overflow: auto;
+  }
+
   .tableWrapper {
     cursor: default;
     .columnsEllipsis {
