fix: Update routes

--- a/ui/src/pages/Alarm/Notifications/styles/index.less
+++ b/ui/src/pages/Alarm/Notifications/styles/index.less
@@ -9,4 +9,10 @@
     flex: 0 0 42px;
     align-items: center;
   }
+
+  .tableMain {
+    flex: 1;
+    min-height: 0;
+    overflow: auto;
+  }
 }
