fix: Defining user types

--- a/ui/src/pages/document.ejs
+++ b/ui/src/pages/document.ejs
@@ -5,21 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="keywords"
-      content="antd,umi,umijs,ant design,Scaffolding, layout, Ant Design, project, Pro, admin, console, homepage, out-of-the-box, middle and back office, solution, component library"
-    />
-    <meta
-      name="description"
-      content="
-    An out-of-box UI solution for enterprise applications as a React boilerplate."
-    />
-    <meta
-      name="description"
-      content="
-      Out-of-the-box mid-stage front-end/design solution."
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+      content="mogo, MOGO, MoGo, Clickhouse"
     />
     <title>MoGo</title>
     <link rel="icon" href="<%= context.config.publicPath + 'favicon.ico'%>" type="image/x-icon" />
@@ -34,7 +20,6 @@
     </script>
   </head>
   <body>
-    <noscript>Out-of-the-box mid-stage front/design solution!</noscript>
     <div id="root">
       <div
         style="
