--- a/ui/src/pages/Alarm/Rules/components/AlarmHistory/index.less
+++ b/ui/src/pages/Alarm/Rules/components/AlarmHistory/index.less
@@ -9,17 +9,18 @@
     align-items: center;
     height: 100%;
     margin-right: 5px;
+    text-align: center;
     .content {
       flex: 1;
       padding-left: 24px;
-      font-size: 24px;
-      line-height: 48px;
+      font-size: 18px;
+      line-height: 36px;
       .title {
         font-weight: bold;
       }
     }
     .progress {
-      flex: 0 0 160px;
+      flex: 1;
     }
   }
   .divider {
