feat: Added system initialization

--- a/ui/src/layouts/User/UserCardHeader/index.less
+++ b/ui/src/layouts/User/UserCardHeader/index.less
@@ -1,8 +1,8 @@
 .userCardHeaderMain {
   display: flex;
-  flex: 0 0 100px;
   align-items: center;
   justify-content: center;
+  height: 100px;
   .title {
     color: #41464b;
     font-weight: bolder;
