--- a/ui/src/pages/User/Login/index.less
+++ b/ui/src/pages/User/Login/index.less
@@ -1,8 +1,8 @@
 .loginMain {
   display: flex;
-  flex: 1;
   flex-direction: column;
   width: 100%;
+  height: 500px;
   padding: 20px 10px;
 
   .loginTitle {
