--- a/ui/src/layouts/User/styles/index.less
+++ b/ui/src/layouts/User/styles/index.less
@@ -3,7 +3,6 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  //background: linear-gradient(to top, hsl(199, 64%, 73%) 0%, hsl(0, 0%, 92%) 100%);
   background: linear-gradient(
     to top,
     hsl(0, 0%, 89%) 0%,
@@ -16,19 +15,16 @@
   }
 
   .userCard {
-    display: flex;
-    flex: 0 0 550px;
-    flex-direction: column;
-    align-items: center;
-    height: 600px;
+    width: 550px;
     margin: 2px 0;
     background: hsla(0, 0%, 255%, 0.3);
     border-radius: 10px;
     box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.2);
 
     .divider {
-      flex: 0 0 1px;
       width: 80%;
+      height: 1px;
+      margin: 0 auto;
       background: hsla(0, 0%, 0%, 0.1);
       box-shadow: 0 0 0.5px hsla(0, 0%, 0%, 0.3);
     }
