feat(log data): 1.Optimize log word segmentation 2.Optimized log query experience 3.Fixed some bugs

--- a/ui/src/pages/DataLogs/components/HighCharts/index.less
+++ b/ui/src/pages/DataLogs/components/HighCharts/index.less
@@ -1,5 +1,5 @@
 .highChartsMain {
-  flex: 0 0 100px;
+  flex: 1;
   :global {
     .ant-empty {
       margin: 20px 0 0 0;
@@ -17,7 +17,8 @@
   padding: 10px 0;
   color: #fff;
   font-size: 12px;
-  font-family: '-apple-system', 'BlinkMacSystemFont', 'PingFang SC', 'Helvetica', 'Tahoma', 'Arial',
-    'Microsoft YaHei', '微软雅黑', '黑体', 'Heiti', 'sans-serif', 'SimSun', '宋体', 'serif';
+  font-family: "-apple-system", "BlinkMacSystemFont", "PingFang SC", "Helvetica",
+    "Tahoma", "Arial", "Microsoft YaHei", "微软雅黑", "黑体", "Heiti",
+    "sans-serif", "SimSun", "宋体", "serif";
   line-height: 20px;
 }
