--- a/ui/src/pages/DataLogs/components/QueryResult/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/index.less
@@ -4,31 +4,46 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-
-  .querySpinning {
+  .content {
     display: flex;
     flex: 1;
     min-width: 0;
     min-height: 0;
+
     .queryDetail {
       display: flex;
       flex: 1;
       flex-direction: column;
       min-width: 0;
       min-height: 0;
-    }
 
-    :global {
-      .ant-spin-nested-loading {
+      .querySpinning {
         display: flex;
-        flex: 1;
-      }
-
-      .ant-spin-container {
-        display: flex;
-        flex: 1;
         min-width: 0;
         min-height: 0;
+        :global {
+          .ant-spin-nested-loading {
+            display: flex;
+            flex: 1;
+          }
+
+          .ant-spin-container {
+            display: flex;
+            flex: 1;
+            min-width: 0;
+            min-height: 0;
+          }
+        }
+      }
+
+      .highCharts {
+        flex: 0 0 100px;
+      }
+      .highChartsHidden {
+        flex: 0 0 0;
+      }
+      .logs {
+        flex: 1;
       }
     }
   }
