feat: You can now add logs to the database list

--- a/ui/src/pages/DataLogs/components/SelectedDatabaseDraw/index.less
+++ b/ui/src/pages/DataLogs/components/SelectedDatabaseDraw/index.less
@@ -1,3 +1,4 @@
+@import "../../../../styles/var.less";
 .databaseDrawMain {
   .textOmission {
     width: 100%;
@@ -26,4 +27,9 @@
       flex: 1;
     }
   }
+}
+
+.addIcon {
+  color: @primary-color;
+  cursor: pointer;
 }
