feat(log library): 1.Optimize the log library list 2.Added log library description

--- a/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/LogLibraryInfoDraw/index.less
+++ b/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/LogLibraryInfoDraw/index.less
@@ -21,6 +21,13 @@
     }
   }
 
+  .itemDesc {
+    width: 100%;
+    .descContent {
+      overflow: hidden;
+    }
+  }
+
   .selectBar {
     width: 240px;
   }
