--- a/ui/src/styles/var.less
+++ b/ui/src/styles/var.less
@@ -12,5 +12,7 @@
 @font-color: #41464beb;
 // #fff
 @font-color-white: hsl(0, 0%, 255%);
+// #d94646
+@font-color-error: hsl(0, 66%, 56%);
 
 @border-color: hsla(0, 0%, 0%, 0.1);
