--- a/ui/src/pages/DataLogs/components/RawLogList/LogItem/index.less
+++ b/ui/src/pages/DataLogs/components/RawLogList/LogItem/index.less
@@ -4,7 +4,7 @@
   padding: 10px 13px;
   .left {
     display: flex;
-    flex: 0 0 170;
+    flex: 0 0 170px;
     margin-top: 3px;
     font-size: 14px;
     .logIndex {
