--- a/ui/src/pages/DataLogs/components/SearchBar/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/index.less
@@ -1,8 +1,7 @@
 .searchBarMain {
   display: flex;
-  flex: 0 0 42px;
-  order: 0;
-  width: 100%;
+  flex: 1;
+  margin-right: 8px;
   .inputBox {
     flex: 1;
     height: 32px;
