--- a/ui/src/pages/DataLogs/components/QueryResult/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/index.less
@@ -4,6 +4,11 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  .header {
+    display: flex;
+    flex: 0 0 42px;
+    order: 0;
+  }
   .content {
     display: flex;
     flex: 1;
