fix: Fixed query input box problem

--- a/ui/src/pages/DataLogs/components/QueryResult/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/index.less
@@ -6,8 +6,10 @@
   height: 100%;
   .header {
     display: flex;
-    flex: 0 0 42px;
+    //flex: 0 0 42px;
+    flex: 0;
     order: 0;
+    min-height: 42px;
   }
   .content {
     display: flex;
