--- a/ui/src/pages/DataLogs/components/SearchBar/index.less
+++ b/ui/src/pages/DataLogs/components/SearchBar/index.less
@@ -5,12 +5,16 @@
   .inputBox {
     flex: 1;
     height: 32px;
-    margin-right: 8px;
+    padding-right: 8px;
   }
   .searchBtn {
     flex: 0;
     margin-left: 8px;
   }
+}
+
+.checkBtn {
+  height: 32px;
 }
 
 .tooltipTitle {
