fix: Modifying the project name

--- a/ui/src/pages/document.ejs
+++ b/ui/src/pages/document.ejs
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="轻量级的开源日志查询、分析、报警的可视化平台，致力于提供一站式应用可靠性的可视化的解决方案。既可以独立部署使用，也可作为插件集成到第三方系统。目前是市面上唯一一款支持 ClickHouse 的类 Kibana 的业务日志查询平台。">
     <meta
       name="keywords"
-      content="mogo, MOGO, MoGo, Clickhouse"
+      content="ClickVisual, clickvisual, CLICKVISUAL, Clickhouse, shimo"
     />
-    <title>MoGo</title>
+    <meta name="author" content="@shimo_sre">
+    <title>ClickVisual</title>
     <link rel="icon" href="<%= context.config.publicPath + 'favicon.ico'%>" type="image/x-icon" />
     <script>
       var _hmt = _hmt || [];
@@ -34,7 +36,7 @@
         "
       >
           <img style='height: 100px;width: 100px;' src="<%= context.config.publicPath + 'favicon.ico'%>" />
-          <div><span>MoGo</span></div>
+          <div><span>ClickVisual</span></div>
           <div><span style="font-size: 24px;">&copy;&nbsp;ShiMo_SRE</span></div>
       </div>
     </div>
