feat: 1. Change the logo 2. Optimize the query experience of statistics charts

--- a/ui/src/pages/DataLogs/components/QueryResult/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/index.less
@@ -55,11 +55,17 @@
 
   .tableContent {
     flex-direction: column;
+    min-height: 0;
     margin-top: 10px;
     .sqlTip {
       flex: 0 0 24px;
       color: red;
       line-height: 24px;
+    }
+    .sqlTable {
+      flex: 1;
+      padding-right: 10px;
+      overflow: auto;
     }
   }
 }
