--- a/ui/src/pages/document.ejs
+++ b/ui/src/pages/document.ejs
@@ -10,7 +10,7 @@
     />
     <meta name="author" content="@shimo_sre">
     <title>ClickVisual</title>
-    <link rel="icon" href="<%= context.config.publicPath + 'favicon.ico'%>" type="image/x-icon" />
+    <link rel="icon" href="<%= context.config.publicPath + 'cv.png'%>" type="image/x-icon" />
     <script>
       var _hmt = _hmt || [];
       (function() {
@@ -35,7 +35,7 @@
           font-weight: bold;
         "
       >
-          <img style='height: 100px;width: 100px;' src="<%= context.config.publicPath + 'favicon.ico'%>" />
+          <img style='height: 100px;width: 178px;' src="<%= context.config.publicPath + 'cv.png'%>" />
           <div><span>ClickVisual</span></div>
           <div><span style="font-size: 24px;">&copy;&nbsp;ShiMo_SRE</span></div>
       </div>
