fix: Optimizing log list

--- a/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/index.less
+++ b/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/index.less
@@ -46,3 +46,11 @@
 .deletedSpan {
   color: @font-color-error;
 }
+
+.logLibraryToolTip {
+  left: 235px !important;
+}
+
+.logTipTitle {
+  font-weight: 700;
+}
