fix: Remove hm and update copyright

--- a/ui/src/pages/document.ejs
+++ b/ui/src/pages/document.ejs
@@ -8,18 +8,9 @@
       name="keywords"
       content="ClickVisual, clickvisual, CLICKVISUAL, Clickhouse, shimo"
     />
-    <meta name="author" content="@shimo_sre">
+    <meta name="author" content="@clickvisual">
     <title>ClickVisual</title>
     <link rel="icon" href="<%= context.config.publicPath + 'cv.png'%>" type="image/x-icon" />
-    <script>
-      var _hmt = _hmt || [];
-      (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?be62e5a14a3d1e00cbddf78c13d37d7f";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-      })();
-    </script>
   </head>
   <body>
     <div id="root">
@@ -37,7 +28,6 @@
       >
           <img style='height: 100px;width: 100px;' src="<%= context.config.publicPath + 'cv.png'%>" />
           <div><span>ClickVisual</span></div>
-          <div><span style="font-size: 24px;">&copy;&nbsp;ShiMo_SRE</span></div>
       </div>
     </div>
   </body>
