--- a/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/TriggerConditionItem/index.less
+++ b/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/TriggerConditionItem/index.less
@@ -1,3 +1,5 @@
+@import "../../../../../../styles/var.less";
+
 .conditionsMain {
   flex: 1;
   .fieldLine {
@@ -29,4 +31,21 @@
       }
     }
   }
+}
+
+.moreOptionsBtn {
+  display: inline-block;
+  padding: 8px 0;
+  color: @primary-color;
+  line-height: 22px;
+  cursor: pointer;
+  user-select: none;
+  span {
+    margin-left: 2px;
+  }
+}
+.moreOptions {
+  padding: 8px;
+  border: 1px dashed @border-color;
+  border-radius: 8px;
 }
