feat: Added no data alarm policy configuration

--- a/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/TriggerConditionItem/index.less
+++ b/ui/src/pages/Alarm/Rules/components/FormAlarmDraw/TriggerConditionItem/index.less
@@ -35,7 +35,7 @@
 
 .moreOptionsBtn {
   display: inline-block;
-  padding: 8px 0;
+  padding: 0 0 8px 0;
   color: @primary-color;
   line-height: 22px;
   cursor: pointer;
@@ -43,9 +43,4 @@
   span {
     margin-left: 2px;
   }
-}
-.moreOptions {
-  padding: 8px;
-  border: 1px dashed @border-color;
-  border-radius: 8px;
 }
