feact: Text internationalization in instance management and permission management

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/ManageIndexModal/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogsIndexes/ManageIndexModal/index.less
@@ -34,11 +34,13 @@
   .tableBody {
     .jsonTd {
       border-bottom: none;
+      min-width: 150px;
     }
     .jsonChildTd {
       padding: 0 0 10px;
     }
     .isJsonDiv {
+      width: 90%;
       position: relative;
       display: flex;
       align-items: center;
