feact: Support users to manually change the left width of the home page (200px~500px)

--- a/ui/src/pages/DataLogs/components/DataSourceMenu/index.less
+++ b/ui/src/pages/DataLogs/components/DataSourceMenu/index.less
@@ -1,13 +1,15 @@
 .dataSourceMenuMain {
   display: flex;
-  flex: 0 0 200px;
+  // flex: 0 0 200px;
   flex-direction: column;
-  max-width: 200px;
+  max-width: 400px;
   margin-right: 5px;
   padding: 5px;
   background: hsla(0, 0%, 92%, 0.4);
+  position: relative;
 }
 
 .dataSourceMenuHidden {
   display: none;
+  position: relative;
 }
