--- a/ui/src/pages/DataLogs/styles/index.less
+++ b/ui/src/pages/DataLogs/styles/index.less
@@ -15,8 +15,9 @@
 
   .menuBtn {
     position: absolute;
-    top: calc(50% - 50px);
-    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -15px;
     display: flex;
     align-items: center;
     width: 12px;
@@ -30,6 +31,6 @@
   }
 
   .menuBtnCollapsed {
-    left: 212px;
+    left: -8px;
   }
 }
