style: Optimize the sidebar Tooltip style

--- a/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/index.less
+++ b/ui/src/pages/DataLogs/components/DataSourceMenu/LogLibraryList/index.less
@@ -21,6 +21,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         user-select: none;
+        padding-right: 30px;
       }
 
       .icon {
@@ -47,9 +48,6 @@
   color: @font-color-error;
 }
 
-.logLibraryToolTip {
-  left: 235px !important;
-}
 
 .logTipTitle {
   font-weight: 700;
