feat: Automatically populate the current instance and database and access the existing log library

--- a/ui/src/pages/SystemSetting/InstancePanel/components/InstanceTable/index.less
+++ b/ui/src/pages/SystemSetting/InstancePanel/components/InstanceTable/index.less
@@ -7,4 +7,10 @@
     color: @primary-color;
     cursor: pointer;
   }
+
+  .logLibraryIcon {
+    color: @primary-color;
+    cursor: pointer;
+    font-size: 17px;
+  }
 }
