--- a/ui/src/components/JsonView/index.less
+++ b/ui/src/components/JsonView/index.less
@@ -13,6 +13,9 @@
   color: @font-color;
   background: #f5f5f5;
 }
+.jsonIndexViewKey {
+  background: @primary-color-8;
+}
 
 .jsonViewValue {
   padding-left: 8px;
