feat: The JsonString text of the log supports line breaks

--- a/ui/src/components/JsonView/index.less
+++ b/ui/src/components/JsonView/index.less
@@ -41,6 +41,17 @@
   }
 }
 
+.hiddenButton {
+  height: 18px;
+  align-items: center;
+  display: inline-flex;
+  margin-right: 5px;
+}
+
+.pre {
+  margin: 0;
+}
+
 .jsonViewArrayItem {
   & > .jsonViewValue {
     padding-left: 0;
