--- a/ui/src/styles/var.less
+++ b/ui/src/styles/var.less
@@ -10,6 +10,8 @@
 @primary-color-1: hsl(21, 88%, 97%);
 // #41464beb
 @font-color: #41464beb;
+// #41464b
+@font-bord-color: #41464b;
 // #fff
 @font-color-white: hsl(0, 0%, 255%);
 // #d94646
