feat(log data): Index field query is supported after collapse

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LogItem/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LogItem/index.less
@@ -55,6 +55,7 @@
           white-space: nowrap;
           text-overflow: ellipsis;
           vertical-align: middle;
+          cursor: pointer;
         }
         span {
           display: inline-block;
