fix: Perfect log line feeds

--- a/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LogItem/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/Content/RawLog/RawLogList/LogItem/index.less
@@ -91,7 +91,9 @@
     }
     .logContent {
       margin-left: 4px;
+      margin-bottom: 0;
       word-break: break-all;
+
       :global {
         .ant-tag {
           height: 20px;
