feat(data analysis): Add temporary query UI

--- a/ui/src/pages/DataAnalysis/RealTimeTrafficFlow/index.less
+++ b/ui/src/pages/DataAnalysis/RealTimeTrafficFlow/index.less
@@ -6,6 +6,7 @@
   padding: 10px;
   .libraryTree {
     flex: 0 0 300px;
+    padding: 10px;
     border: 1px solid @border-color;
     border-radius: 8px;
   }
