--- a/ui/src/pages/DataAnalysis/RealTimeTrafficFlow/index.less
+++ b/ui/src/pages/DataAnalysis/RealTimeTrafficFlow/index.less
@@ -3,7 +3,7 @@
 .realTimeTrafficMain {
   display: flex;
   height: 100%;
-  padding: 10px;
+  // padding: 10px 10px 10px 0;
   .libraryTree {
     flex: 0 0 300px;
     padding: 10px;
@@ -13,6 +13,10 @@
 
   .trafficEChart {
     flex: 1;
-    max-height: 100%;
+    max-height: calc(100vh - 140px);
+    max-width: calc(100vw - 226px);
+    overflow: hidden;
+    border-radius: 8px;
+    margin-left: 4px;
   }
 }
