--- a/ui/src/pages/DataAnalysis/index.less
+++ b/ui/src/pages/DataAnalysis/index.less
@@ -2,18 +2,19 @@
   display: flex;
   flex-direction: column;
   width: calc(100vw - 48px);
+  // transition: background-color .5s;
 
   .screeningRow {
     width: 100%;
-    padding:  6px 41px;
     height: 40px;
+    padding: 6px 41px;
   }
   .contentBox {
     display: flex;
     .nav {
       width: 30px;
       height: 100%;
-      margin-top: 30px;
+      margin-top: 10px;
       .navItem {
         display: flex;
         align-items: center;
