fix: Big data style adjustments

--- a/ui/src/pages/DataAnalysis/RealTimeTrafficFlow/index.less
+++ b/ui/src/pages/DataAnalysis/RealTimeTrafficFlow/index.less
@@ -8,7 +8,12 @@
     flex: 0 0 300px;
     padding: 10px;
     border: 1px solid @border-color;
-    border-radius: 8px;
+    // border-radius: 8px;
+    // background-color: #1c1c1c;
+    :global .ant-select-single .ant-select-selector .ant-select-selection-search-input {
+      background-color: #1c1c1c;
+      color: #fff;
+    }
   }
 
   .trafficEChart {
@@ -18,5 +23,6 @@
     overflow: hidden;
     border-radius: 8px;
     margin-left: 4px;
+    background-color: #fff;
   }
 }
