--- a/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
+++ b/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
@@ -13,7 +13,6 @@
     background-color: #1c1c1c;
 
     .title {
-      // background-color: #f66;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -42,7 +41,6 @@
     }
 
     .searchBox {
-      // background-color: #ff6;
       display: flex;
       align-items: center;
       box-sizing: border-box;
@@ -50,7 +48,6 @@
       height: 32px;
       padding: 4px 4px 8px 8px;
       .search {
-        // padding: ;
         flex: 1;
 
         :global .ant-input-affix-wrapper {
@@ -58,12 +55,12 @@
           height: 22px;
           padding: 0;
           background-color: transparent;
-          border-radius: 0;
         }
 
         :global .ant-input {
           color: #fff;
           background-color: transparent !important;
+          border-radius: 0;
         }
       }
 
@@ -79,7 +76,6 @@
 
     .content {
       flex: 1;
-      // background-color: #66f;
       padding: 4px 8px;
       overflow-y: scroll;
       color: #fff;
@@ -148,10 +144,7 @@
   }
 }
 
-.site-tree-search-value {
-  color: #f50;
-}
-
+// 去掉滚动条
 ::-webkit-scrollbar {
   display: none; /* Chrome Safari */
 }
