--- a/ui/src/pages/DataAnalysis/index.less
+++ b/ui/src/pages/DataAnalysis/index.less
@@ -2,19 +2,27 @@
   display: flex;
   flex-direction: column;
   width: calc(100vw - 48px);
-  // transition: background-color .5s;
+  background-color: #1c1c1c;
+  // transition: background-color 0.5s;
 
   .screeningRow {
     width: 100%;
     height: 40px;
     padding: 6px 41px;
+    // background-color: #1c1c1c;
+    :global .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+      background-color: #1c1c1c;
+      color: #fff;
+    }
+
   }
   .contentBox {
     display: flex;
     .nav {
       width: 30px;
-      height: 100%;
-      margin-top: 10px;
+      height: calc(100vh - 145px);
+      padding-top: 10px;
+      // background-color: #1c1c1c;
       .navItem {
         display: flex;
         align-items: center;
@@ -23,6 +31,7 @@
         height: 30px;
         margin-bottom: 8px;
         font-size: 24px;
+        border-radius: 2px;
         cursor: pointer;
       }
     }
@@ -31,7 +40,22 @@
       flex: 1;
       height: calc(100vh - 145px);
       overflow: hidden;
-      border-radius: 8px;
+      // border-radius: 8px;
     }
   }
 }
+
+
+:global .ant-select-dropdown .ant-select-dropdown-placement-bottomLeft {
+  background-color: #1c1c1c;
+  color: #fff;
+}
+
+:global .ant-select-clear {
+  border-radius: 50%;
+}
+
+// :global .ant-select-item-option-selected:not(.ant-select-item-option-disabled), :global .ant-select-item{
+//   background-color: #1c1c1c;
+//   color: #fff;
+// }
