add export excel button to StatisticalTable

--- a/ui/src/pages/DataLogs/components/QueryResult/index.less
+++ b/ui/src/pages/DataLogs/components/QueryResult/index.less
@@ -57,10 +57,13 @@
     flex-direction: column;
     min-height: 0;
     margin-top: 10px;
-    .sqlTip {
+    .tableTopBar{
       flex: 0 0 24px;
-      color: red;
-      line-height: 24px;
+      .sqlTip{
+        margin-left: 5px;
+        color: red;
+        line-height: 24px;
+      }
     }
     .sqlTable {
       flex: 1;
