fix：The code merge

--- a/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
+++ b/ui/src/pages/DataAnalysis/TemporaryQuery/index.less
@@ -102,10 +102,12 @@
       // 树状组件选中局部背景色
       :global .ant-tree .ant-tree-node-content-wrapper.ant-tree-node-selected {
         background-color: #84350b !important;
+        border-radius: 4px;
       }
       // 树状组件hover局部背景色
       :global .ant-tree .ant-tree-node-content-wrapper:hover {
         background-color: #5e2608;
+        border-radius: 4px;
       }
 
       // 树状组件hover背景色
